--- a/cards/templates/cards/base.html
+++ b/cards/templates/cards/base.html
@@ -59,6 +59,7 @@
   <body>
     <header>
       <h1>Flashcards App</h1>
+      {% include "cards/navigation.html" %}
     </header>
     <main>
       {% block content %}
