--- a/cards/templates/cards/card_form.html
+++ b/cards/templates/cards/card_form.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     {% if card %}
-        <h2>Edit Card</h2>
+        <h2>✏️ Edit Card</h2>
     {% else %}
-        <h2>✨ Create New Card</h2> 
-    {% endif %}
+        <h2>✨ Create New Card</h2>
+{% endif %}
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
